# POLY-cuda

./: CMakeLists.txt  README.md  poly-cuda
demo/: bump.poly  cornell.poly  demo.poly  duck.poly  hypercube.poly  klein.poly  reflections.poly  refractions.poly
demo/models/: cacodemon.ply  cone.ply  cube.ply  duck.ply  duck2.ply  floppy.ply  ibm5110.ply  ibm5110_screen.ply  klein.ply  male.ply  pacman.ply  poly.ply  quad.ply  quad2.ply  sand.ply  sky.ply  skySphere.ply  sphere.ply  table.ply
include/: Camera.h  Light.h  Material.h  POLY-cuda.h  Poly.h  PolyRenderer.h  PolyShaders.h  RGBA.h  Vec.h
src/: Camera.cu  Light.cu  Material.cu  Poly.cu  PolyRenderer.cu  PolyShaders.cu  RGBA.cu  Vec.cu  main.cpp
